# openmp-rs

./: .appveyor.yml  Cargo.toml  README.md  build.rs
src/: ffi.rs  lib.rs
