[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["external-ffi-bindings"]
description = "Link with OpenMP (libgomp)"
documentation = "https://gitlab.com/kornelski/openmp-rs#readme"
homepage = "https://www.openmp.org/"
keywords = ["openmp", "omp", "gomp"]
license = "CC0-1.0"
links = "openmp"
name = "openmp-sys"
readme = "README.md"
repository = "https://gitlab.com/kornelski/openmp-rs.git"
version = "1.0.0"
edition = "2018"

[badges]
appveyor = { repository = "pornel/openmp-rs" }
gitlab = { repository = "kornelski/openmp-rs" }

[build-dependencies]
cc = "1.0.50"

[features]
static = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
