[package]
authors = ["Kornel <kornel@geekhood.net>"]
categories = ["external-ffi-bindings", "concurrency"]
description = "Link with OpenMP (libgomp)"
documentation = "https://gitlab.com/kornelski/openmp-rs#readme"
homepage = "https://www.openmp.org/"
keywords = ["openmp", "omp", "gomp"]
license = "CC0-1.0"
links = "openmp"
name = "openmp-sys"
readme = "README.md"
repository = "https://gitlab.com/kornelski/openmp-rs.git"
version = "1.2.2"
edition = "2021"

[badges]
appveyor = { repository = "pornel/openmp-rs" }
gitlab = { repository = "kornelski/openmp-rs" }
maintenance = { status = "deprecated" }

[build-dependencies]
cc = "1.0.67"

[features]
static = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
